fix: update astro dependency to version 5.10.1 and adjust scrollbar styles in global CSS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,7 @@
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
   --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-4: #ffbb00;
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
@@ -124,9 +124,34 @@
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: local("JetBrains Mono Regular"), url("/fonts/JetBrainsMono-Regular.ttf") format("truetype");
+  src: local("JetBrains Mono Regular"),
+    url("/fonts/JetBrainsMono-Regular.ttf") format("truetype");
 }
 
 body {
   font-family: "JetBrains Mono", ui-sans-serif, system-ui;
+  --sb-track-color: #232e33;
+  --sb-thumb-color: #ffbb00;
+  --sb-size: 8px;
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size);
+  height: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 3px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 3px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+  }
 }
